--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "app1",
-  "version": "0.1.0",
+  "homepage": "https://piyushjagtap22.github.io/Text-Utils",
   "private": true,
+  "version": "0.1.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -16,7 +17,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
